# Jana-JanusInterp

./: .gitignore  ChangeLog.md  Makefile  README.md  Tutorial.md  jana.cabal
basicExamples/: automata.janus  factor.janus  fib.janus  perm_to_code.janus  root.janus  runlength_encoding.janus  schroedinger.janus  smf.janus  sort.janus  swap_equals.janus  turing.janus
examples/: a.out  factor.ja  fib.ja  fib.ja.cpp  matrixmult.c  matrixmult.ja  matrixmult.ja.cpp  matrixmult_bs_cpp  matrixmult_v1.0.ja  mm  mm.cpp  mm2  mm_v1.cpp  mmc  sqrt.ja  sqrt.ja.cpp  test2.ja
src/: Main.hs  Makefile  RevTM.hs  TestSVB.hs  a.out  add.cpp  add.h  factor  factor.cpp  factorI.cpp  fib  fib.c  fib.cpp  normal.c.jaEmb  sqrt  sqrt.cpp  test.c  test.ja  test2.ja  test3.ja  test4.ja
src-gen_ulrik/: abstractobj.ja  boxes.ja  containers.ja  containrsx.ja  counting.ja  error.txt  main_only.ja  math.ja  point.c  twice.c  twice2.c  twice2.ja  twice3.c  twice3.ja  twice4.c  twice4.ja
src/Jana/: Aliases.hs  Ast.hs  Debug.hs  Error.hs  ErrorMessages.hs  Eval.hs  Format.hs  Invert.hs  JanusToC.hs  Parser.hs  ParserBasic.hs  Printf.hs  Types.hs
src/RevTM/: FrontParser.hs  JanusToTMC.hs  TMinterface.txt  Types.hs
tests/: fib.janusb
tests/errors/: alias-swap-1.ja  alias-swap-2.ja  assert.ja  assertion-fail-from-bwd.ja
tests/unit/: exp.janus  stack_decl.janus
