name:                jana
version:             1.1
synopsis:            Janus interpreter
description:         Interpreter for the reversible language Janus.
license:             BSD3
license-file:        LICENSE
author:              Michael Budde, Claus Skou Nielsen, Michael Kirkedal Thomsen
maintainer:          kirkedal@acm.org
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >= 1.8
extra-source-files:  README.md

flag static
  description:       Build static binary
  default:           False

executable jana
  main-is:           Main.hs
  other-modules:     Jana.Aliases
                     Jana.Ast
                     Jana.Error
                     Jana.ErrorMessages
                     Jana.Eval
                     Jana.Format
                     Jana.Invert
                     Jana.Parser
                     Jana.Printf
                     Jana.Types
  hs-source-dirs:    src
  build-depends:     base >= 4.5.0,
                     parsec >= 3.1.3,
                     containers >= 0.4.2.1,
                     mtl >= 2.1.2,
                     pretty == 1.*,
                     arithmoi >= 0.4.3.0,
                     monad-coroutine >= 0.9.0.3
  if flag(static)
    ghc-options:     -static -optc-static -optl-static -optl-pthread
